# BondTrading

./: .gitignore  04_base_model_test.ipynb  05_adding_feartures.ipynb  06_categorical.ipynb  06_richting_voorspellen.ipynb  README.md  pyproject.toml
data/processed/: bonds.csv  bonds.json  bonds.pkl  bp.json  bpy.json  inflation.json  isin.csv  isin.json  isin.pkl  price.json  yield.json
data/raw/: Bonds.csv  DE Inflation.csv  DE Inflation.xlsx  Deals.csv  Deals.xlsx  ES Inflation.csv  ES Inflation.xlsx  FR Inflation.csv  FR Inflation.xlsx  IT Inflation.csv  IT Inflation.xlsx  US Inflation.csv  US Inflation.xlsx  df.csv
data/test/: bonds.csv  bondsi.csv
notebooks/: 01_Tijdreeksanalyse_bondprijzen.ipynb  01_business_understanding.ipynb  02_data_exploratie.ipynb  02_data_preperation.ipynb  02_data_voorbewerking.ipynb  03_data_exploratie.ipynb  04_base_model.ipynb  04_modeling.ipynb  05_anomalie_detection.ipynb  06_custom_loss.ipynb  modeling_example_tf.ipynb  tensorflow_example.ipynb  test.ipynb
reports/: 01_Tijdreeksanalyse_bondprijzen.html  02_data_preperation.html  02_data_voorbewerking.html  03_data_exploratie.html  04_base_model.html  05_toevoegen_features.html  06_richting_voorspellen.html
src/data/: join_data.py  make_dataset.py  split.py  window.py
src/features/: build_features.py
src/models/: base_model.py  calculate.py  evaluate.py  hyper.py  predict_model.py  split.py  window.py
src/visualization/: old_plots.py  visualize.py
