[tool.poetry]
name = "bondtrading"
version = "0.1.0"
description = ""
authors = ["Merijn van Miltenburg <merijn.vanmiltenburg@hotmail.com>"]

[tool.poetry.dependencies]
python =  ">=3.9.6,<3.10"
numpy = "^1.22.0"
plotly = "^5.5.0"
matplotlib = "^3.5.1"
seaborn = "^0.11.2"
scikit-learn = "^1.0.2"
loguru = "^0.5.3"
libclang="<12.0.0"
tensorflow = "^2.7.0"
nbformat = "^5.1.3"
bayesian-optimization = "^1.2.0"
ray = {extras = ["tune"], version = "^1.8.0"}
tensorflow-addons = "^0.15.0"
hyperopt = "^0.2.7"
tensorflow-hub = "^0.12.0"
keras-tuner = "^1.1.0"
h5py = "^3.6.0"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
flake8 = "^4.0.1"
flake8-annotations = "^2.7.0"
ipykernel = "^6.6.1"
isort = "^5.10.1"
mypy = "^0.931"
pep8-naming = "^0.12.1"
hypothesis = "^6.35.0"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
